# iot-smart-attendance

./: .env  .gitignore  FACIAL_RECOGNITION_SETUP.md  README.md  face_recognition_service.py  firebase-config.json  pyproject.toml  requirements.txt  start_face_service.py  tsconfig.json  vite.config.ts
attached_assets/: app_1750395714632.py  firebase-config_1750395714632.json  requirements_1750395714632.txt
client/: index.html
client/src/: index.css
client/src/components/: AttendanceGraphAndReport.tsx  AttendancePanel.tsx  CentralNotification.tsx  FaceVerificationModal.tsx  SensorsPanel.tsx  ServiceStatus.tsx  StudentRegistration.tsx  VideoSimulation.tsx
client/src/lib/: firebase.ts
client/src/pages/: Home.tsx
env/: pyvenv.cfg
server/: index.ts
shared/: schema.ts
