[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=6.9.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "google-auth>=2.40.3",
    "google-cloud-firestore>=2.21.0",
    "numpy>=2.3.0",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "sift-stack-py>=0.6.2",
]
